html에 스크립트 연결

--- a/html/main/index.html
+++ b/html/main/index.html
@@ -5,7 +5,7 @@
 	<title>Test</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 	<link rel="stylesheet" href="../../assets/css/style.css">
-	<script src="../../assets/js/common.js"></script>
+	<script src="../../assets/js/test.js"></script>
 </head>
 <body>
 	<ul class="media-test">
