--- a/html/main/index.html
+++ b/html/main/index.html
@@ -8,10 +8,6 @@
 	<script src="../../assets/js/test.js"></script>
 </head>
 <body>
-	<ul class="media-test">
-		<li>media1</li>
-		<li>media2</li>
-		<li>media3</li>
-	</ul>
+	<div id="kcm"></div>
 </body>
 </html>
